# dumb

./: CHANGELOG.md  cabal.project  modelyz-dumb.cabal  rundev.sh
src/: Main.hs
